修改页面配置，适配小工具

--- a/apps/code-compress/index.html
+++ b/apps/code-compress/index.html
@@ -8,7 +8,7 @@
         <script src="../static/vendor/require/require.js"></script>
     </head>
     <body>
-    <div class="wrapper" id="pageContainer">
+    <div class="wrapper" style="width: auto" id="pageContainer">
         <div class="panel panel-default" style="margin-bottom: 0px;">
             <div class="panel-heading">
                 <h3 class="panel-title">
