--- a/apps/html2markdown/index.html
+++ b/apps/html2markdown/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="wrapper" id="pageContainer">
+<div class="wrapper" style="width: auto" id="pageContainer">
     <div class="panel panel-default" style="margin-bottom: 0px;">
         <div class="panel-heading">
             <h3 class="panel-title">
